# device_properties_test

./: CMakeLists.txt  README.md  main.cpp
